# Research_Intern

./: README.md
MyApp/: settings.gradle
MyApp/app/: build.gradle
MyApp/app/src/main/: AndroidManifest.xml
MyApp/app/src/main/cpp/: CMakeLists.txt  myapp.cpp
MyApp/app/src/main/java/com/example/myapp/: ChartActivity.java  DatabaseHelper.java  MainActivity.java  SensorService.java
MyApp/app/src/main/res/layout/: activity_main.xml
MyApp/gradle/wrapper/: gradle-wrapper.properties
